test/error/escape_level.ss
var g = 3;
< 3[g] >;
